﻿**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.18 beta
------------------------
  - Enhancement  #836 Option for AppleTrailers to include or exclude trailer types
  - Fixed defect #846 appletrailers.download is case sensitive
  - Fixed defect #850 Exception generated if Jukebox directory can't be written to
  - Fixed defect #852 Kinopoisk fix due to changed web pages
  - Fixed defect #857 Apple trailer configMax is not handled correctly
  - Fixed defect #865 New API Key required for MovieMeter plugin

MovieJukebox 1.0.17 beta
------------------------
  - Enhancement  #218 Play button on remote for multipart movies
  - Enhancement  #226 Additional indexes by actor, director, and country; provide links to these index pages on movie details page
                      Extra parameters to fine-tune index generation: mjb.categories.indexList, displayList, and minCategoryCount
  - Enhancement  #311 A playlist is now generated for all movies (even if there's only one file), and it is customizable via playlist.xsl
  - Enhancement  #411 Plugin for Dutch movie database (www.moviemeter.nl)
  - Enhancement  #455 Split HD Category into 720p and 1080p
  - Enhancement  #462 Enable/disable Year and Certification rating in index page of all skins. New skin-options.xsl file.
  - Enhancement  #465 Play All link at beginning of playlist instead of end
  - Fixed defect #475 Correctly display index pages when mjb.nbThumbnailsPerLine=1
  - Enhancement  #498 AppleTrailer download control for trailer types
  - Enhancement  #507 Properties can be overridden at the command line
  - Fixed defect #565 FilmAffinity ID ignored
  - Fixed defect #581 gfb skin's links to genres from movie details pages were broken for filtered genres
  - Fixed defect #586 Reverse sort order ignored for sd, gfb107, and gfb107-sd skins